--- a/Group Report/Lab 3/L3-phiho267-zijfe244.Rmd
+++ b/Group Report/Lab 3/L3-phiho267-zijfe244.Rmd
@@ -8,15 +8,17 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE, out.width = "320px")
 ```
 
-```{r, echo=FALSE, warning=FALSE}
+```{r, echo=FALSE, warning=FALSE, results='hide', message=FALSE}
 # library used
 library(ggplot2)
 library(MASS) # To access the mvrnorm() function
 library(LaplacesDemon) # for rinvchisq
 library(gridExtra) # put plot together
+library(mvtnorm)
+library(kableExtra)
 ```
 
 
@@ -50,7 +52,7 @@ set.seed(123456)
 v_0 <- 1 # how much we trust the prior's var's mean is
 sigma2_0 <- var(rainfall$precipitation) # the variacne of the data 
 # sigma2
-sigma2 <- rinvchisq(n = 1, df = v_0, scale = sigma2_0) # need this value for the first simulation
+sigma2 <- sigma2_0 # need this value for the first simulation
 
 # prior parameter for 'mu'
 tau2_0 <- 1 # how much we trust the prior's mu's var is
@@ -65,6 +67,7 @@ mu <- rnorm(n = 1, mean = mu_0, tau2_0) # need this value for the first simulati
 # the sampling
 nDraws <- 1000
 Gibbs_sampling <- data.frame("mu" = numeric(), "sigma2" = numeric())
+Gibbs_sampling2 <- data.frame("mu" = numeric(), "sigma2" = numeric())
 
 # for exercise 1 a) ii
 # create vairables for mean and varaicne
@@ -76,7 +79,7 @@ for (i in 1:nDraws) {
   # generate mu - need mu_n (need w to generate mu_n) & tau2_n
   # mu_n - L2S3 - Normal data, known variance - normal prior
   
-  #-- generate mu ------------ start
+  #-- generate mu -------------------------------------------------------- start
   # generate w
   w <- (n/sigma2)/((n/sigma2) + (1/tau2_0))
   # generate mu_n
@@ -87,10 +90,10 @@ for (i in 1:nDraws) {
   
   #-- generate mu 
   mu <- rnorm(n = 1, mean = mu_n, sd = tau2_n)
-  #-- generate mu ------------ end
+  #-- generate mu ---------------------------------------------------------- end
   
-  
-  # generate sigma2 ------------ start
+  old_sigma2 <- sigma2
+  # generate sigma2 ------------------------------------------------------ start
   # generate v_n - L5s3 - Normal model with normal prior
   v_n <- v_0 + n
   
@@ -99,19 +102,23 @@ for (i in 1:nDraws) {
   
   #-- generate sigma2
   sigma2 <- rinvchisq(n = 1, df = v_n, scale = second_term)
-  # generate sigma2 ------------ end
+  # generate sigma2 -------------------------------------------------------- end
   
   # save mu & sigma in df
-  sampling <- data.frame("mu" = mu, "sigma2" = sigma2)
-  
+  Gibbs_sampling2 <- rbind(Gibbs_sampling2, data.frame(mu, sigma2))
+  if(i==1){
+    sampling <- data.frame("mu" = mu, "sigma2" = sigma2)
+  }else{
+    sampling <- data.frame("mu" = c(mu, mu), "sigma2" = c(old_sigma2, sigma2))
+  }
   # variables we want to save
   Gibbs_sampling <- rbind(Gibbs_sampling, sampling)
   #save the mean of mu and variance
-  mean_vec[i] <- mean(Gibbs_sampling$mu)
-  variance_vec[i] <- var(Gibbs_sampling$sigma2)
+  mean_vec[i] <- mean(Gibbs_sampling2$mu)
+  variance_vec[i] <- var(Gibbs_sampling2$sigma2)
   
 }
-Gibbs_sampling$iterations <- 1:nDraws
+Gibbs_sampling2$iterations <- 1:nDraws
 
 ```
 
@@ -121,47 +128,47 @@ Gibbs_sampling$iterations <- 1:nDraws
 # plot mu and sigma2
 
 # plot mu
-plot_tace_mu <- ggplot(data = Gibbs_sampling) + 
+plot_tace_mu <- ggplot(data = Gibbs_sampling2) + 
   geom_line(aes(x = iterations, y = mu),color = "#e74c3c") +
-  geom_smooth(aes(x = iterations, y = mu),method="auto") +
+  geom_smooth(aes(x = iterations, y = mu),method="gam") +
   ggtitle("Tace of mu")
   # plot sigma2
-plot_tace_sigma2 <-ggplot(data = Gibbs_sampling) + 
+plot_tace_sigma2 <-ggplot(data = Gibbs_sampling2) + 
   geom_line(aes(x = iterations, y = sigma2), color = "#2980b9") + 
-  geom_smooth(aes(x = iterations, y = sigma2), method = "auto")+
+  geom_smooth(aes(x = iterations, y = sigma2), method = "gam")+
   ggtitle("Tace of sigma2")
 
 grid.arrange(plot_tace_mu, plot_tace_sigma2, nrow = 2)
 
 ```
 
-In the first picture you can see the tendacy of $\mu$, which converges very quickly. The starting value is about 22, but after a few iterations it approaches the value of 26-27.
-It seems that sigma does not have a start value that is extremely outside the normal range. So there is no burn-in period.
+These two plots show the samplings of $\mu$ and $\sigma^2$. Based on the `geom_smooth(method="gam")`, it is obvious that we simulate thse two parameters well.
 
 ```{r, warning=FALSE, echo=FALSE}
 # converge of mean 
 plot_converge_mu <- ggplot() + 
-  geom_line(aes(x = Gibbs_sampling$iterations, y = mean_vec, color = "mean")) + 
+  geom_line(aes(x = Gibbs_sampling2$iterations, y = mean_vec), color = "#e74c3c") + 
   labs(title = "Convergence of mu", x = "interation", y = "mean")
 
 # converge of sigma 
 plot_converge_sigma <-ggplot() + 
-  geom_line(aes(x = Gibbs_sampling$iterations, y = variance_vec, color = "variance")) + 
+  geom_line(aes(x = Gibbs_sampling2$iterations, y = variance_vec), color = "#2980b9") + 
   labs(title = "Convergence of sigma2", x = "interation", y = "variance")
 
 grid.arrange(plot_converge_mu, plot_converge_sigma, nrow = 2)
 ```
 
-We have calculated the mean and the variance of the given iterationS. This can be seen at the end of the code of the task 1a)i of the Gibbs sampler. 
+We have calculated the mean and the variance of the given iterations. This can be seen at the end of the code of the task 1a)i of the Gibbs sampler. 
 The first picture confirms the assumption that mu converges after only a few iterations. 
 The same is true for sigma, but here about 125 iterations are used. 
+Anyway, our sampling simulations converge well.
 
 
 ```{r, echo=FALSE}
 # plotting the trajectories
 # plot data
 plot_data_q1aii <- Gibbs_sampling[,1:2]
-plot_data_q1aii <- plot_data_q1aii[1:20,] # test- just take the first x rows
+plot_data_q1aii <- plot_data_q1aii[1:100,] # test- just take the first x rows
 
 plot_mu_vs_sigma_line <- ggplot(plot_data_q1aii, 
                                 aes(x = plot_data_q1aii$mu, y = plot_data_q1aii$sigma2)) +
@@ -172,14 +179,13 @@ plot_mu_vs_sigma_line <- ggplot(plot_data_q1aii,
   geom_point(aes(x = plot_data_q1aii$mu[length(plot_data_q1aii$mu)], 
                  y = plot_data_q1aii$sigma2[length(plot_data_q1aii$sigma2)], 
                  color = "end"), size = 3) +
-  ggtitle("mu vs sigma2 - line 20 points") + ylab("sigma2") + xlab("mu") +
+  ggtitle("mu vs sigma2 - trajectories 100 points") + ylab("sigma2") + xlab("mu") +
   theme(legend.position = "bottom")
 plot_mu_vs_sigma_line
 ```
 ```{r, echo=FALSE}
-# plotting the trajectories
 # plot data
-plot_data_q1aii <- Gibbs_sampling[,1:2]
+plot_data_q1aii <- Gibbs_sampling2[,1:2]
 plot_data_q1aii <- plot_data_q1aii[1:1000,] # test- just take the first x rows
 
 plot_mu_vs_sigma_line <- ggplot(plot_data_q1aii, 
@@ -244,7 +250,8 @@ rDirichlet <- function(param){
   for (j in 1:nCat){
     piDraws[j] <- rgamma(1,param[j],1)
   }
-  piDraws = piDraws/sum(piDraws) # Diving every column of piDraws by the sum of the elements in that column.
+  # Diving every column of piDraws by the sum of the elements in that column.
+  piDraws = piDraws/sum(piDraws) 
   return(piDraws)
 }
 
@@ -304,7 +311,7 @@ for (k in 1:nIter){
   
   # -------------------- Update - start -------------------
     simulated_mu[k,] <- mu
-  # -------------------- Update - end -------------------
+  # -------------------- Update - end ---------------------
   
   # Update sigma2's
   for (j in 1:nComp){
@@ -315,7 +322,7 @@ for (k in 1:nIter){
   
   # -------------------- Update - start -------------------
     simulated_sigma[k,] <- sigma2
-  # -------------------- Update - end -------------------
+  # -------------------- Update - end ---------------------
   
   
   
@@ -330,7 +337,8 @@ for (k in 1:nIter){
   # Printing the fitted density against data histogram
   if (plotFit && (k%%1 ==0)){
     effIterCount <- effIterCount + 1
-    #hist(x, breaks = 20, freq = FALSE, xlim = c(xGridMin,xGridMax), main = paste("Iteration number",k), ylim = ylim)
+    #hist(x, breaks = 20, freq = FALSE, xlim = c(xGridMin,xGridMax), 
+          # main = paste("Iteration number",k), ylim = ylim)
     mixDens <- rep(0,length(xGrid))
     components <- c()
     for (j in 1:nComp){
@@ -352,22 +360,6 @@ for (k in 1:nIter){
 #########################    Helper functions    #############################
 
 ```
-
-```{r, warning=FALSE, eval=FALSE}
-# make the plot above with ggplot
-  
-ggplot(data = as.data.frame(x), aes(x = x)) +
-    geom_histogram(aes(y=..density..),
-                 colour="black",
-                 fill="white",
-                 bins=30) +
-  geom_line(data = data.frame(x = xGrid, y = mixDensMean), linetype = "dotdash",
-            aes(x = xGrid, y = mixDensMean),size=1.5,color="Red")
-  
-```
-
-
-
 ```{r, echo=FALSE, warning=FALSE}
 plot_simulated_mu <- ggplot() + 
   geom_line(aes(x = 1:nIter, y = simulated_mu[,1], color = "mu_1")) +
@@ -383,41 +375,27 @@ plot_simulated_sigma <- ggplot() +
 grid.arrange(plot_simulated_mu, plot_simulated_sigma, nrow = 2)
 ```
 
+With the growth of iterations, $\mu$'s and $\sigma^2$'s we assume converge respectively.
 
 ## (c) Graphical comparison.
 Let $\hat{\mu}$ denote the posterior mean of the parameter $\mu$ and correspondingly for the other parameters. Plot the following densities in one figure: 
 
 1) a histogram or kernel density estimate of the data. 
 ```{r, echo=FALSE}
-ggplot(data = rainfall, aes(x = precipitation)) + 
+ggplot(data = as.data.frame(x), aes(x = V1)) + 
   geom_histogram(aes(y=..density..),
                  colour="black",
                  fill="white",
-                 bins=30)
+                 bins=20)
 ```
 
 
 2) Normal density $\mathcal{N} (\hat{\mu},\hat{\sigma}^2)$ in (a). 
 ```{r, echo=FALSE}
-
-# \hat{mu} & \hat{sigma}^2 - simulated with rnomal with this values
-
-# ggplot(data = Gibbs_sampling, aes(x = mu)) +
-#     geom_histogram(aes(y=..density..),
-#                  colour="black",
-#                  fill="white",
-#                  bins=30)
-# 
-# ggplot(data = Gibbs_sampling, aes(x = sigma2)) +
-#     geom_histogram(aes(y=..density..),
-#                  colour="black",
-#                  fill="white",
-#                  bins=30)
-
 # plot data 
 
-plot_data_q1c2 <-  rnorm(n = nDraws, mean = Gibbs_sampling$mu[i], 
-                           sd = sqrt(Gibbs_sampling$sigma2[i]))
+plot_data_q1c2 <-  rnorm(n = nDraws, mean = Gibbs_sampling2$mu[dim(Gibbs_sampling2)[1]], 
+                           sd = sqrt(Gibbs_sampling2$sigma2[dim(Gibbs_sampling2)[1]]))
 
 # the plot
 ggplot(data = as.data.frame(plot_data_q1c2), aes(x = plot_data_q1c2)) +
@@ -433,7 +411,7 @@ ggplot(data = as.data.frame(plot_data_q1c2), aes(x = plot_data_q1c2)) +
 
 3) Mixture of normals density $\ p (y_i \mid \hat{\mu},\hat{\sigma}^2, \hat{\pi})$ in (b).
 ```{r, echo=FALSE}
-hist(x, breaks = 30, freq = FALSE, xlim = c(xGridMin,xGridMax), main = "Final fitted density")
+hist(x, breaks = 20, freq = FALSE, xlim = c(xGridMin,xGridMax), main = "Final fitted density")
 lines(xGrid, mixDensMean, type = "l", lwd = 2, lty = 4, col = "red")
 lines(xGrid, dnorm(xGrid, mean = mean(x), sd = apply(x,2,sd)), type = "l", lwd = 2, col = "blue")
 legend("topright", box.lty = 1, legend = c("Data histogram","Mixture density","Normal density"), col=c("black","red","blue"), lwd = 2)
@@ -461,18 +439,18 @@ where $y_i$ is the count for the ith observation in the sample and $x_i$ is the 
 
 
 ##(a) Obtain the maximum likelihood estimator 
-of $\beta$ in the Poisson regression model for the eBay data [Hint: **glm.R**, don???t forget that **glm()** adds its own intercept so don???t input the covariate Const]. Which covariates are significant?
-```{r}
+of $\beta$ in the Poisson regression model for the eBay data [Hint: **glm.R**, don't forget that **glm()** adds its own intercept so don't input the covariate Const]. Which covariates are significant?
+```{r, warning=FALSE}
 rm(list = ls())
 data <- read.table("eBayNumberOfBidderData.dat", head = TRUE)
-mdl.2a <- glm(nBids ~ 0 + ., data = data)
+mdl.2a <- glm(nBids ~ ., data = data[-2], family = poisson)
 summary(mdl.2a)
 ```
 
 Based on the estimate from `glm.R`, the covariate *MinBidShare* has the largest absolute value among all the covariates, which means it is the most significant.
 
 ## (b) Bayesian analysis of the Poisson regression
-Let's now do a Bayesian analysis of the Poisson regression. Let the prior be $\beta \sim \mathcal{N}\big[ \mathbf{0},100 \cdot (\mathbf{X}^T \mathbf{X})^{-1} \big]$ where **X** is the $n \times p$ covariate matrix. This is a commonly used prior which is called Zellner???s g-prior. Assume first that the posterior density is approximately multivariate normal:
+Let's now do a Bayesian analysis of the Poisson regression. Let the prior be $\beta \sim \mathcal{N}\big[ \mathbf{0},100 \cdot (\mathbf{X}^T \mathbf{X})^{-1} \big]$ where **X** is the $n \times p$ covariate matrix. This is a commonly used prior which is called Zellner's g-prior. Assume first that the posterior density is approximately multivariate normal:
 
 $$  \beta \mid y \sim \mathcal{N} \big( \tilde{\beta}, J^{-1}_\mathbf{y} (\tilde{\beta}) \big),  $$
 
@@ -522,6 +500,9 @@ OptimResults <- optim(initVal,
                    control = list(fnscale=-1),
                    hessian = TRUE)  # output hessian matrix
 
+```
+```{r, echo=FALSE}
+
 # Printing the results to the screen
 postMode <- OptimResults$par
 
@@ -541,6 +522,7 @@ print(postMode)
 print('The approximate posterior standard deviation is:')
 print(approxPostStd)
 ```
+
 
 
 ## (c) Simulate from the actual posterior
@@ -575,36 +557,56 @@ RWMSampler <- function(LogPostFunc, num, c,...){
       draws[count,] <- theta.new
     }
   }
-  cat("acceptance probability: ",num/i)
+  cat("acceptance probability: ",num/i,"\n")
   return(draws)
 }
 
-c <- 0.3
-num <- 1000
+c <- 0.35
+num <- 1200
 RW <- RWMSampler(LogPostFunc = LogPostLogistic, 
            num = num, 
            c = c,
            y = y, X = X, mu = postMode, Sigma = postCov)
 
-colMeans(RW)
 ```
 
-```{r}
+```{r, echo=FALSE, out.height="450px"}
 Index <- 1:num
 data.2c <- cbind(RW, Index)
 cnames <- colnames(data.2c)[1:9]
 f <- function(cname){
   ggplot(data.2c, aes_string(x = Index, y = cname)) +
-    geom_line() +
-    stat_smooth()
+    geom_line() 
+}
+plot(arrangeGrob(grobs = lapply(cnames, f)))
+```
+
+```{r, echo=FALSE, out.height="450px"}
+f <- function(cname){
+  ggplot(data.2c, aes_string(x = cname)) +
+    geom_histogram(aes(y=..density..),
+                 colour="black",
+                 fill="white",
+                 bins=30)+
+  geom_density(alpha=.2, colour = "blue", size=1)
 }
 plot(arrangeGrob(grobs = lapply(cnames, f)))
 
 ```
 
+```{r, echo=FALSE}
+t <- round(t(mdl.2a$coefficients), 3)
+colnames(t) <- names(postMode)
+results <- rbind(t, round(t(postMode),3),round(colMeans(RW),3))
+results <- cbind(step = c("Q2a","Q2b","Q2c"), results)
 
+kable(results) %>% 
+  kable_styling(latex_options="scale_down")
+```
 
+Based on the table, the results from all the steps are close to each other. 
 
+\newpage
 # Lecture code
 ```{r, eval=FALSE}
 # the given R file - NormalMixtureGibbs.R
@@ -649,7 +651,8 @@ rDirichlet <- function(param){
   for (j in 1:nCat){
     piDraws[j] <- rgamma(1,param[j],1)
   }
-  piDraws = piDraws/sum(piDraws) # Diving every column of piDraws by the sum of the elements in that column.
+  # Diving every column of piDraws by the sum of the elements in that column.
+  piDraws = piDraws/sum(piDraws) 
   return(piDraws)
 }
 
